# LLM_Book_Recommender

./: .env  Dockerfile  README.md  check.py  cloudbuild.yaml  main.py  pyproject.toml  requirements.txt
chroma_db_google/: chroma.sqlite3
notebooks/: data-exploration.ipynb
src/: preprocessing.py  vector.py
