[project]
name = "llm-book-recommander"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.6.0",
    "ipywidgets>=8.1.8",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "matplotlib>=3.10.8",
    "notebook>=7.5.3",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.1",
    "seaborn>=0.13.2",
    "transformers>=5.2.0",
]
