[project]
name = "llm-book-recommander"
version = "0.1.0"
requires-python = ">=3.12,<3.13"

dependencies = [
    "streamlit",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-community",
    "langchain-chroma>=0.1.2",
    "google-generativeai>=0.7.0",
    "pandas",
    "python-dotenv",
    "google-genai>=1.65.0",
]
